# QueryProcessing

QueryProcessing/: .cproject  .project  CMakeLists.txt  command_log.txt
QueryProcessing/src/: Geometry.cpp  GeometryCollection.cpp  NodeTag.cpp  OperatorDictionary.cpp  PointOperations.cpp  QueryProcessing.cpp  QueryTree.cpp
QueryProcessing/src/data-storage/: geometry-collection.cpp
QueryProcessing/src/headerfiles/: geometry.h  query-processing.h  query-tree.h
QueryProcessing/src/integration/: PointOperations.h  RectangleOperations.h  geometry-collection.h  geometry.cpp  geometry.h  query-processing.h  query-tree.cpp  query-tree.h  query_result.h
QueryProcessing/src/operators/: FilterBy.cpp  KNN.cpp  Range.cpp
QueryProcessing/src/query-processing/: OperatorDictionary.cpp  PointOperations.cpp  PointOperationsTest.cpp  QueryProcessing.cpp  QueryProcessingTest.cpp  QueryResult.cpp  QueryTree.cpp  RectangleOperations.cpp  RectangleOperationsTest.cpp  Test.cpp  TestQueryProcessing.cpp
